refactor: 매직넘버 상수 처리 및 메서드 분리.