@@ -21,6 +21,10 @@ import org.apache.coyote.Processor;
 @Slf4j
 public class Http11Processor implements Runnable, Processor {
 
+    private static final String CRLF = "\r\n";
+    private static final int EOF = -1;
+    private static final String CONTENT_LENGTH_HEADER_PREFIX = "content-length:";
+
     private final Socket connection;
     private final SessionManager sessionManager;
 
@@ -41,10 +45,6 @@ public class Http11Processor implements Runnable, Processor {
              final OutputStream outputStream = connection.getOutputStream()) {
 
             final HttpRequest request = buildRequest(inputStream);
-            if (request == null) {
-                return;
-            }
-
             final HttpResponse response = buildResponse(request);
 
             outputStream.write(response.toString().getBytes(StandardCharsets.UTF_8));
@@ -68,7 +68,7 @@ public class Http11Processor implements Runnable, Processor {
     private void readHeader(final BufferedReader reader, final StringBuilder requestBuilder) throws IOException {
         String line;
         while ((line = reader.readLine()) != null) {
-            requestBuilder.append(line).append("\r\n");
+            requestBuilder.append(line).append(CRLF);
             if (line.isEmpty()) {
                 break;
             }
@@ -84,12 +84,11 @@ public class Http11Processor implements Runnable, Processor {
         }
 
         final char[] buffer = new char[contentLength];
-        final int eof = -1;
         int totalRead = 0;
 
         while (totalRead < contentLength) {
             final int bytesRead = reader.read(buffer, totalRead, contentLength - totalRead);
-            if (bytesRead == eof) {
+            if (bytesRead == EOF) {
                 throw new IOException(
                         "Content-Length와 실제 데이터 길이 불일치: 예상 " + contentLength + "바이트, 실제 " + totalRead + "바이트");
             }
@@ -99,11 +98,9 @@ public class Http11Processor implements Runnable, Processor {
     }
 
     private int extractContentLength(final String request) {
-        for (final String line : request.split("\r\n")) {
-            final String contentLengthPrefix = "content-length:";
-
-            if (line.toLowerCase().startsWith(contentLengthPrefix)) {
-                return Integer.parseInt(line.substring(contentLengthPrefix.length()).trim());
+        for (final String line : request.split(CRLF)) {
+            if (line.toLowerCase().startsWith(CONTENT_LENGTH_HEADER_PREFIX)) {
+                return Integer.parseInt(line.substring(CONTENT_LENGTH_HEADER_PREFIX.length()).trim());
             }
         }
         return 0;
@@ -111,76 +108,113 @@ public class Http11Processor implements Runnable, Processor {
 
     private HttpResponse buildResponse(final HttpRequest request) {
         final String path = request.getPath();
+        final HttpMethod method = request.getMethod();
 
-        if (HttpMethod.GET == request.getMethod()) {
-            if ("/".equals(path)) {
-                return new HttpResponse(request.getVersion(), HttpStatus.OK, ContentType.HTML, "Hello world!");
-            }
+        return switch (method) {
+            case GET -> handleGetRequest(request, path);
+            case POST -> handlePostRequest(request, path);
+            default -> throw new UnsupportedOperationException("지원하지 않는 HTTP 메서드: " + method);
+        };
+    }
 
-            return serveStaticFile(request, path);
+    private HttpResponse handleGetRequest(final HttpRequest request, final String path) {
+        if ("/".equals(path)) {
+            return new HttpResponse(request.getVersion(), HttpStatus.OK, ContentType.HTML, "Hello world!");
         }
+        return serveStaticFile(request, path);
+    }
 
-        if (HttpMethod.POST == request.getMethod()) {
-            switch (path) {
-                case "/login":
-                    return handleLoginRequest(request);
-                case "/register":
-                    return handleSignupRequest(request);
-            }
-        }
-
-        throw new UnsupportedOperationException();
+    private HttpResponse handlePostRequest(final HttpRequest request, final String path) {
+        return switch (path) {
+            case "/login" -> handleLoginRequest(request);
+            case "/register" -> handleSignupRequest(request);
+            default -> throw new UnsupportedOperationException("지원하지 않는 POST 경로: " + path);
+        };
     }
 
     private HttpResponse serveStaticFile(final HttpRequest request, final String path) {
-        final ContentType contentType = ContentType.from(path);
-
-        if (path.startsWith("/login") && isValidSessionInCookie(request)) {
+        if (shouldBypassLoginPage(request, path)) {
             return HttpResponse.redirect(request.getVersion(), "/index.html");
         }
 
-        String resourcePath = "static" + path;
+        final String resourcePath = buildResourcePath(path);
+        return loadAndServeFile(request, resourcePath);
+    }
 
-        if (!path.contains(".")) {
-            resourcePath += ".html";
+    private boolean shouldBypassLoginPage(final HttpRequest request, final String path) {
+        return path.startsWith("/login") && isValidSessionInCookie(request);
+    }
+
+    private String buildResourcePath(final String path) {
+        final String resourcePath = "static" + path;
+        if (path.contains(".")) {
+            return resourcePath;
         }
+        return resourcePath + ".html";
+    }
 
+    private HttpResponse loadAndServeFile(final HttpRequest request, final String resourcePath) {
         try {
             final URL resource = getClass().getClassLoader().getResource(resourcePath);
 
             if (resource == null) {
-                return new HttpResponse(request.getVersion(), HttpStatus.NOT_FOUND, ContentType.HTML, "Not Found");
+                return createNotFoundResponse(request);
             }
 
-            final String fileContent = new String(
-                    Files.readAllBytes(Paths.get(resource.toURI())), StandardCharsets.UTF_8);
+            final String fileContent = Files.readString(Paths.get(resource.toURI()), StandardCharsets.UTF_8);
+            final ContentType contentType = ContentType.from(resourcePath);
 
             return new HttpResponse(request.getVersion(), HttpStatus.OK, contentType, fileContent);
         } catch (final Exception e) {
             log.error("정적 파일 서빙 중 오류 발생: {}", resourcePath, e);
-            return new HttpResponse(request.getVersion(), HttpStatus.INTERNAL_SERVER_ERROR, ContentType.HTML,
-                    "Internal Server Error");
+            return createServerErrorResponse(request);
         }
+    }
+
+    private HttpResponse createNotFoundResponse(final HttpRequest request) {
+        final HttpStatus notFound = HttpStatus.NOT_FOUND;
+        return new HttpResponse(
+                request.getVersion(),
+                notFound,
+                ContentType.HTML,
+                notFound.getReasonPhrase());
+    }
+
+    private HttpResponse createServerErrorResponse(final HttpRequest request) {
+        final HttpStatus internalServerError = HttpStatus.INTERNAL_SERVER_ERROR;
+        return new HttpResponse(
+                request.getVersion(),
+                internalServerError,
+                ContentType.HTML,
+                internalServerError.getReasonPhrase());
     }
 
     private HttpResponse handleLoginRequest(final HttpRequest request) {
         try {
             final User user = processLogin(request);
-
-            final HttpResponse response = HttpResponse.redirect(request.getVersion(), "/index.html");
-
-            if (isValidSessionInCookie(request)) {
-                return response;
-            }
-
-            final Session session = new Session();
-            session.setAttribute("user", user);
-            sessionManager.add(session);
-            response.setCookie("JSESSIONID", session.getId());
-            return response;
+            return createLoginSuccessResponse(request, user);
         } catch (final Exception e) {
+            log.debug("로그인 실패: {}", e.getMessage());
             return HttpResponse.redirect(request.getVersion(), "/401.html");
         }
+    }
+
+    private HttpResponse createLoginSuccessResponse(final HttpRequest request, final User user) {
+        final HttpResponse response = HttpResponse.redirect(request.getVersion(), "/index.html");
+
+        if (isValidSessionInCookie(request)) {
+            return response;
+        }
+
+        createAndSetSession(response, user);
+        return response;
+    }
+
+    private void createAndSetSession(final HttpResponse response, final User user) {
+        final Session session = new Session();
+        session.setAttribute("user", user);
+        sessionManager.add(session);
+        response.setCookie("JSESSIONID", session.getId());
     }
 
     private boolean isValidSessionInCookie(final HttpRequest request) {
@@ -200,12 +234,8 @@ public class Http11Processor implements Runnable, Processor {
     }
 
     private HttpResponse handleSignupRequest(final HttpRequest request) {
-        final String account = request.getBodyParam("account");
-        final String password = request.getBodyParam("password");
-        final String email = request.getBodyParam("email");
-
         try {
-            final User user = InMemoryUserRepository.save(User.withoutId(account, password, email));
+            final User user = createUser(request);
 
             log.debug("회원 가입 성공: {}", user);
             return HttpResponse.redirect(request.getVersion(), "/index.html");
@@ -213,5 +243,13 @@ public class Http11Processor implements Runnable, Processor {
             log.debug("회원 가입 실패: {}", e.getMessage());
             return HttpResponse.redirect(request.getVersion(), "/401.html");
         }
+    }
+
+    private User createUser(final HttpRequest request) {
+        final String account = request.getBodyParam("account");
+        final String password = request.getBodyParam("password");
+        final String email = request.getBodyParam("email");
+        return InMemoryUserRepository.save(
+                User.withoutId(account, password, email));
     }
 }
